<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <TextView
        style="@style/Caption"
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="150dp"
    />


    <androidx.cardview.widget.CardView
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView"
        android:id="@+id/cardViewLogin"
        android:layout_width="169dp"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="250dp">

        <ImageView
            android:id="@+id/profilePhoto"
            android:layout_width="169dp"
            android:layout_height="169dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:srcCompat="@tools:sample/avatars"
            android:contentDescription="profile picture"/>
    </androidx.cardview.widget.CardView>




    <EditText
        style="@style/EditText"
        android:id="@+id/username"
        android:layout_width="169dp"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewLogin"
        android:imeOptions="actionDone"
        />

    <Button
        style="@style/ButtonRound"
        android:id="@+id/startBtn"
        android:layout_width="169dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/start"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />


</androidx.constraintlayout.widget.ConstraintLayout>



