<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout
    android:background="@drawable/popup_background"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingBottom="20dp"
>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
           >

            <androidx.cardview.widget.CardView
                android:id="@+id/cardviewFishImage"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:elevation="8dp"
                app:cardCornerRadius="250dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_margin="40dp"
                >

                <ImageView
                    android:id="@+id/fishIconDialog"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/profilePictureDesc"
                    android:src="@drawable/bluefish_adult"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.cardview.widget.CardView>

            <TextView
                style="@style/CaptionSmall"
                android:layout_marginStart="0dp"
                android:id="@+id/fishNameDialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:layout_marginLeft="0dp"
                app:layout_constraintTop_toBottomOf="@+id/cardviewFishImage" />

            <TextView
                android:id="@+id/fishBehaviourDialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="TextView"
                android:singleLine="false"
                android:layout_marginLeft="0dp"
                app:layout_constraintTop_toBottomOf="@+id/fishNameDialog" />

            <Button
                style="@style/ButtonRound"
                android:id="@+id/buy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:layout_marginTop="20dp"
                android:text="@string/buy"
                app:layout_constraintTop_toBottomOf="@+id/fishBehaviourDialog"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginStart="20dp"
                app:layout_constraintRight_toLeftOf="@id/cancel"
                />

            <Button
                style="@style/ButtonRound"
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/cancel"
                app:layout_constraintTop_toBottomOf="@+id/fishBehaviourDialog"
                app:layout_constraintLeft_toRightOf="@id/buy"
                app:layout_constraintRight_toRightOf="parent"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
