<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollQuote"
        android:layout_width="240dp"
        android:layout_height="80dp"
        android:layout_marginTop="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <TextView
            style="@style/quoteStyle"
            android:id="@+id/quote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.core.widget.NestedScrollView>



    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewImageSlider"
        android:layout_marginTop="25dp"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:layout_centerHorizontal="true"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="250dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollQuote">

        <androidx.cardview.widget.CardView
            android:id="@+id/viewImage"
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:layout_gravity="center"
            android:elevation="18dp"
            app:cardCornerRadius="250dp">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewPagerMain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:srcCompat="@tools:sample/avatars"/>


        </androidx.cardview.widget.CardView>
    </androidx.cardview.widget.CardView>

    <Button
        style="@style/ButtonRound"
        android:id="@+id/startTimerBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/start"
        app:layout_constraintEnd_toEndOf="@+id/timerText"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="@+id/timerText"
        app:layout_constraintTop_toBottomOf="@+id/timerText" />


    <Button
        style="@style/ButtonRound"
        android:id="@+id/stopTimerBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/stop"
        app:layout_constraintEnd_toEndOf="@+id/timerText"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="@+id/timerText"
        app:layout_constraintTop_toBottomOf="@+id/timerText" />

    <TextView
        android:id="@+id/timerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startTime"
        android:layout_marginTop="50dp"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewImageSlider" />

    <TextView
        style="@style/GeneralMarginText"
        android:id="@+id/coinsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintLeft_toRightOf="@id/coinsIcon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        style="@style/GeneralMarginText"
        android:layout_marginRight="8dp"
        android:id="@+id/coinsIcon"
        android:layout_width="22dp"
        android:layout_height="22dp"
        app:srcCompat="@drawable/dollar"
        app:layout_constraintRight_toLeftOf="@id/coinsTextView"
        app:layout_constraintTop_toTopOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>