<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    app:layout_behavior="@string/hide_bottom_view_on_scroll_behavior">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:background="@color/primary_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="250dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >

            <androidx.cardview.widget.CardView
                android:id="@+id/view2"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:elevation="10dp"
                app:cardCornerRadius="250dp">

                <ImageView
                    android:contentDescription="@string/profilePictureDesc"
                    android:id="@+id/profilePicture"
                    android:layout_width="125dp"
                    android:layout_height="125dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/placeholder_avatar" />
            </androidx.cardview.widget.CardView>
        </androidx.cardview.widget.CardView>

        <TextView
            style="@style/GeneralMarginText"
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:textSize="20sp"
            android:text="username"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />




    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        style="@style/CardViewRecyclerViewStyle"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_gravity="center"
        android:layout_marginTop="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
     >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
         >

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintTop_toBottomOf="@+id/statisticsLabel" />

            <TextView
                style="@style/CaptionSmall"
                android:id="@+id/statisticsLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/statistics"
                app:layout_constraintTop_toTopOf="parent"

                 />

            <TextView
                style="@style/Statistics"
                android:id="@+id/focusedTimeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/totalFocusedTime"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider" />

            <TextView
                style="@style/Statistics"
                android:id="@+id/focusedTimeInHoursLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inHours"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/focusedTimeLabel" />

            <TextView
                style="@style/StatisticsValues"
                android:id="@+id/focusedTimeValueInHours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/focusedTimeValue" />

            <TextView
                style="@style/StatisticsValues"
                android:id="@+id/focusedTimeValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/boughtFish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:nestedScrollingEnabled="false"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@id/card_view" />




    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
